--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,8 +1,9 @@
-<h1>Help</h1>
+<% provide(:title, 'Help') %>
 
-<p>
-  Get help on the Ruby on Rails Tutorial at the
-  <ahref="http://railstutorial.org/help">Rails Tutorial help page</a>.
-  To get help on this sample app, see the
-  <ahref="http://railstutorial.org/book">Rails Tutorial book</a>.
+<h1>Help</h1>
+  <p>
+  This is the home page for the
+  <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
+  sample application.
 </p>
+
